# VoyagerEngine

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: CommitStyle.md  DevLog.md
src/: Application.cpp  Application.hpp  Window.cpp  Window.hpp  main.cpp
